En el archivo principal se hace la disposicion de los cuadros en forma de cruz

--- a/styles.css
+++ b/styles.css
@@ -104,50 +104,46 @@ main {
     justify-items: center;
     align-items: center;
     margin-top: 20px;
-    background-color: rgba(255, 255, 255, 0.2);
     padding: 20px; 
     border-radius: 10px; 
-}
-
-.box {
+  }
+  
+  .box {
     background-color: rgba(0, 0, 0, 0.5);
     padding: 20px;
     border-radius: 10px;
     text-align: left;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     position: relative;
-}
-
-.dns {
-    border-radius: 10px;
-    grid-column: 1; /* Primer cuadro ocupa la primera columna */
-    grid-row: 1 / 2;
+  }
+  
+  .dns {
+    grid-column: 1;
+    grid-row: 1 / 3;
     border-top: 5px solid red;
     background-color: rgba(184, 79, 10, 0.5);
-}
-
-.html {
-    grid-column: 2; /* Segundo cuadro en la segunda columna */
+  }
+  
+  .html {
+    grid-column: 2;
     grid-row: 1;
     border-top: 5px solid magenta;
     background-color: rgba(129, 155, 34, 0.5);
-
-}
-
-.css {
-    grid-column: 2; /* Tercer cuadro en la tercera columna */
+  }
+  
+  .css {
+    grid-column: 2;
     grid-row: 2;
     border-top: 5px solid cyan;
     background-color: rgba(141, 20, 56, 0.5);
-
-}
-
-.tcp-ip {
-    grid-column: 3; /* Cuarto cuadro centrado en la segunda columna */
-    grid-row: 1 / 2;
+  }
+  
+  .tcp-ip {
+    grid-column: 3;
+    grid-row: 1 / 3;
     border-top: 5px solid blue;
     background-color: rgba(164, 131, 165, 0.5);
-}
+  }
 
 .box h3 {
     font-size: 1.5em;
