Se le agregan las sombras a los contenedores y se le pone formato a los textos

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@ header h1 {
                  0 0 40px cadetblue; /* Difuminado final */
 }
 
-
 header h2 {
     font-size: 24px;
     color: salmon;
@@ -53,13 +52,17 @@ nav ul li a {
 }
 
 .content .card {
-    margin: 15px auto;
+    margin: 50px auto;
     padding: 10px;
     width: 80%;
-    background-color: rgba(238, 95, 95, 0.9);
+    height: 12em;
+    border-top: 5px solid rgb(51, 22, 212);
+    background-color: rgba(124, 21, 119, 0.9);
+    box-shadow: 0 4px 8px rgba(255, 255, 255);
     border-radius: 10px;
     text-align: left;
     overflow: hidden; 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
@@ -75,13 +78,16 @@ nav ul li a {
 }
 
 .html_box .caja{
-    margin: 15px auto;
+    margin: 50px auto;
     padding: 10px;
     width: 80%;
+    border-top: 5px solid mediumslateblue;
     background-color: rgba(134, 48, 151, 0.9);
+    box-shadow: 0 4px 8px rgb(255, 255, 255);
     border-radius: 10px;
     text-align: left;
     overflow: hidden; 
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .html_box .caja h3 {
@@ -95,11 +101,10 @@ nav ul li a {
     height: 50px;
 }
 
-
 main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 20px;
     justify-items: center;
     align-items: center;
@@ -113,7 +118,7 @@ main {
     padding: 20px;
     border-radius: 10px;
     text-align: left;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(255, 255, 255);
     position: relative;
   }
   
@@ -122,6 +127,7 @@ main {
     grid-row: 1 / 3;
     border-top: 5px solid red;
     background-color: rgba(184, 79, 10, 0.5);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
   .html {
@@ -129,6 +135,7 @@ main {
     grid-row: 1;
     border-top: 5px solid magenta;
     background-color: rgba(129, 155, 34, 0.5);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
   
   .css {
@@ -136,6 +143,7 @@ main {
     grid-row: 2;
     border-top: 5px solid cyan;
     background-color: rgba(141, 20, 56, 0.5);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
   
   .tcp-ip {
@@ -143,6 +151,7 @@ main {
     grid-row: 1 / 3;
     border-top: 5px solid blue;
     background-color: rgba(164, 131, 165, 0.5);
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
 
 .box h3 {
@@ -168,4 +177,5 @@ footer {
 
 footer p {
     margin: 5px;
+    font-family: cursive;
 }
